--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
+    "react-transition-group": "^2.5.3",
     "redux": "^4.0.1"
   },
   "scripts": {
